# cpp-network-tasks

./: .gitignore  README.md  build.sh  build_dockerized.sh  docker-compose.yml  run
img/l7/: 7_25.uml
src/: CMakeLists.txt  CMakePresets.json  win.toolchain.cmake
src/build_image/: Dockerfile  bashrc  build.sh  entry.sh  yggdrasil.conf
src/l1/: CMakeLists.txt  test_byte_order.cpp
src/l1/ping/: CMakeLists.txt  main.cpp  ping.cpp
src/l1/resolve/: CMakeLists.txt  main.cpp
src/l1/udp_client/: CMakeLists.txt  main.cpp  udp_client.cpp
src/l1/udp_server/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  socket_class.h  socket_headers.h  socket_wrapper.h  udp_server.cpp
src/l2/: CMakeLists.txt
src/l2/incorrect_udp_client/: CMakeLists.txt  main.cpp
src/l2/linux_call_intercepter/: CMakeLists.txt  call_intercepter.cpp
src/l2/pcap_sniffer/: CMakeLists.txt  main.cpp  packet_printer.cpp  packet_printer.h
src/l2/pcap_sniffer/cmake/: FindPCAP.cmake  FindWSWinLibs.cmake
src/l2/pcap_sniffer/npcap-sdk-1.12/docs/: index.html  npcap-internals.html  npcap-tutorial.html  npcap-users-guide.html
src/l2/pil/: CMakeLists.txt  main.cpp
src/l2/promisc_switcher/: CMakeLists.txt  main.cpp
src/l2/raw_sniffer/: CMakeLists.txt  main.cpp  pcap_structures.h  sniffer.cpp  sniffer.h
src/l2/simple_http_proxy/: CMakeLists.txt  main.cpp  proxy_server.cpp  proxy_server.h
src/l3/: CMakeLists.txt
src/l3/broadcast_client/: CMakeLists.txt  main.cpp
src/l3/broadcast_server/: CMakeLists.txt  main.cpp
src/l3/file_tcp_client/: CMakeLists.txt
src/l3/file_tcp_server/: CMakeLists.txt  main.cpp
src/l3/new_tcp_client/: CMakeLists.txt  main.cpp
src/l3/tcp_client/: CMakeLists.txt  main.cpp
src/l3/tcp_server/: CMakeLists.txt  main.cpp
src/l4/: CMakeLists.txt
src/l4/asio_server/: CMakeLists.txt  main.cpp
src/l4/c_ares_example/: CMakeLists.txt  main.cpp
src/l4/libevent_echo_server/: CMakeLists.txt  libevent_echo_server.cpp
src/l4/libevpp_echo_server/: CMakeLists.txt  libevpp_echo_server.cpp
src/l4/libuv_echo_server/: CMakeLists.txt  libuv_echo_server.cpp
src/l4/mt_server/: CMakeLists.txt  main.cpp
src/l4/mt_server_with_shift/: CMakeLists.txt  main.cpp
src/l4/reuse_addr_experiment/: CMakeLists.txt  main.cpp
src/l4/select_aio_server/: CMakeLists.txt  main.cpp
src/l5/: CMakeLists.txt  capnproto_aurogen_file_example.capnp.h  protobuf_aurogen_file_example.pb.h
src/l5/HTTP_server/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
src/l5/asio_client/: CMakeLists.txt  main.cpp
src/l5/asio_server/: CMakeLists.txt  main.cpp
src/l5/chat_as_client/: CMakeLists.txt  chat_message.hpp  main.cpp
src/l5/chat_as_server/: CMakeLists.txt  main.cpp
src/l5/gio_client/: CMakeLists.txt  gio_client.cpp
src/l5/gio_server/: CMakeLists.txt  gio_server.cpp
src/l5/phistache-example/: CMakeLists.txt  client.cpp  server.cpp
src/l5/poco-examples/: CMakeLists.txt  client.cpp  dns_resolver.cpp  server.cpp
src/l5/qt_broadcastreceiver/: CMakeLists.txt
src/l5/qt_broadcastsender/: CMakeLists.txt
src/l6/: CMakeLists.txt
src/l6/for_afl/: CMakeLists.txt  build.sh  fuzz.sh
src/l6/for_afl/http_seeds/: post.txt
src/l6/for_afl/plt/: index.html  index.html.orig
src/l6/for_afl/s/: 02command12345.txt
src/l6/jwt-cpp-example/: CMakeLists.txt  main.cpp
src/l6/openssl-client/: CMakeLists.txt  main.cpp
src/l6/openssl-socket-client/: CMakeLists.txt  connector.cpp  connector.h  main.cpp  openssl_socket_client.cpp  openssl_socket_client.h  tcp_client_6.cpp  tcp_client_6.h
src/l6/openssl-socket-server/: CMakeLists.txt  connector.cpp  connector.h  file_proccesing.cpp  file_proccesing.h  main.cpp  open_SSL.cpp  open_SSL.h  tcp_server_6.cpp  tcp_server_6.h
src/l7/: CMakeLists.txt
src/l7/cpp-httplib-example/: CMakeLists.txt  client.cpp  server.cpp
src/l7/curl-example/: CMakeLists.txt  main.cpp
src/l7/lwip_example/: CMakeLists.txt  Dockerfile  docker-compose.yml  echo.cpp  echo.h  main.cpp  ping.cpp  ping.h
src/l7/lwip_example/lwip-include/: lwipopts.h
src/l7/restbed-example/: CMakeLists.txt  main.cpp
src/l7/tg-arm-bot/: CMakeLists.txt
src/l7/tg-arm-bot/api_description/: robotic_arm_driver_api.yml  robotic_arm_server_api.yml
src/l7/tg-arm-bot/driver_console/: CMakeLists.txt  README.md
src/l7/tg-arm-bot/driver_console/src/: App.cpp  WSListener.cpp  WSListener.hpp  device.hpp
src/l7/tg-arm-bot/driver_serial/: CMakeLists.txt  README.md
src/l7/tg-arm-bot/server/: CMakeLists.txt  business_logic.cpp  business_logic.h  main.cpp  server_tg.cpp  server_tg.h  server_web.cpp  server_web.h  web_socket.cpp  web_socket.h
src/l7/tg-arm-bot/tools/: cu_register_device.sh  cu_remove_device.sh  generate_restbed_api.sh  test_ws_client.html
src/l8/: CMakeLists.txt
src/l8/boost_mpi_example/: CMakeLists.txt  messaging.cpp  reduce.cpp
src/l8/libtorrent/: CMakeLists.txt  client.cpp  magnet.cpp
src/l8/openmpi_example/: CMakeLists.txt  main.cpp
src/l8/qt-wordcount/: CMakeLists.txt  main.cpp
src/l8/waste/: WASTE.vcproj  WASTESrv.vcproj  ZArc.bat  ZMake4Linux.bat  ZWinMake.bat  ZWinMakefile  asyncdns.cpp  asyncdns.hpp  blowfish.cpp  blowfish.hpp  changelog.htm  childwnd.cpp  childwnd.hpp  config.cpp  config.hpp  configparams.hpp  connection.cpp  connection.hpp  d_chat.cpp  d_chat.hpp  filedb.cpp  filedb.hpp  itemlist.hpp  itemstack.hpp  keygen.cpp  license.cpp  license.hpp  listen.cpp  listen.hpp  listview.cpp  listview.hpp  m_chat.cpp  m_chat.hpp  m_file.cpp  m_file.hpp  m_keydist.cpp  m_keydist.hpp  m_lcaps.cpp  m_lcaps.hpp  m_ping.cpp  (+45 more)
src/qt_creator_image/: Dockerfile  build.sh
src/socket_wrapper/: CMakeLists.txt
src/socket_wrapper/include/socket_wrapper/: socket_class.h  socket_headers.h  socket_wrapper.h
src/socket_wrapper/src/: socket.cpp  socket_wrapper.cpp  socket_wrapper_impl.h  socket_wrapper_unix.h  socket_wrapper_windows.h
(+42 files in other folders)
