cmake_minimum_required(VERSION 3.10)

project(cpp-network-lesson-3 C CXX)

add_subdirectory("broadcast_client")
add_subdirectory("broadcast_server")
add_subdirectory("tcp_client")
add_subdirectory ("tcp-server")
add_subdirectory ("my_tcp_client")
add_subdirectory ("file_tcp_client")
add_subdirectory ("file-tcp-server")
